# TOON_TO_JSON

./: .env.example  .gitignore  README.md  final_test_gemini.py  final_test_gemini_with_caching.py  final_test_openrouter.py  final_test_sambanova.py  generate_toon_few_shots.py  pyproject.toml  test.py  toon_to_json_llm_validation.py
extra files/: benchmark_redis.py  comparing_json_to_toon.py  enhanced_benchmark_redis.py  final_test_claude.py  final_test_euri.py  full_test_run_log.txt  full_test_run_log_euri.txt  full_test_run_log_gemini-2.5-flash.txt  full_test_run_log_gemini-2.5-flash_caching.txt  full_test_run_log_gemini-2.5-flash_final_caching.txt  full_test_run_log_gemini.txt  full_test_run_log_openrouter.txt  full_test_run_log_openrouter_gemini-2.5-flash.txt  full_test_run_log_openrouter_gemini-2.5-flash1.txt  full_test_run_log_openrouter_meta-llama_llama-3.3-70b-instruct_free.txt  info.txt  json_to_toon.py  modified_toon_format.py  run_test_case.py  test.py  test_euri.py  test_llm_toon.py  test_toon.py  testing.py  testing_multiple_json_to_toon_format.py  testing_multiple_toon.py  toon_to_json.py  toon_to_json_local_validation.py
extra files/.llm_benchmark_cache/: cache.db
extra files/putter/: app.py
