[project]
name = "toon-for-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cerebras-cloud-sdk>=1.59.0",
    "python-dotenv>=1.2.1",
    "toon-format",
]

[tool.uv.sources]
toon-format = { git = "https://github.com/toon-format/toon-python.git" }
